--- a/index.html
+++ b/index.html
@@ -20,69 +20,81 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="link-logo">WebStudio</a>
+        <ul class="list">
+          <li><a href="" class="link-studio">Studio</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link-address"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link-address"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-button">
+        <h1 class="section-button-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="section-button-button">
+          Order Service
+        </button>
       </section>
-      <section>
-        <h2>Benefits</h2>
-        <ul>
+      <section class="section-benefits">
+        <h2 class="section-title">Benefits</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-benefits-title">Strategy</h3>
+            <p class="section-benefits-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-benefits-title">Punctuality</h3>
+            <p class="section-benefits-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-benefits-title">Diligence</h3>
+            <p class="section-benefits-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-benefits-title">Technologies</h3>
+            <p class="section-benefits-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section-our-team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/img-3.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-our-team-title">Mark Guerrero</h3>
+            <p class="section-our-team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -90,8 +102,8 @@
               alt="Tom Ford Frontend Developer"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-our-team-title">Tom Ford</h3>
+            <p class="section-our-team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -99,8 +111,8 @@
               alt="Camila Garcia Marketing"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-our-team-title">Camila Garcia</h3>
+            <p class="section-our-team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -108,33 +120,33 @@
               alt="Daniel Wilson UI Designer"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-our-team-title">Daniel Wilson</h3>
+            <p class="section-our-team-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+      <section class="section-our-portfolio">
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="list">
           <li>
             <img src="./images/img3-5.jpg" alt="Banking app" width="360" />
-            <h3>Banking app</h3>
-            <p>App</p>
+            <h3 class="section-our-portfolio-title">Banking app</h3>
+            <p class="section-our-portfolio-text">App</p>
           </li>
           <li>
             <img src="./images/img3-4.jpg" alt="Cashless Payment" width="360" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="section-our-portfolio-title">Cashless Payment</h3>
+            <p class="section-our-portfolio-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img3-3.jpg" alt="Meditation App" width="360" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="section-our-portfolio-title">Meditation App</h3>
+            <p class="section-our-portfolio-text">App</p>
           </li>
           <li>
             <img src="./images/img3-2.jpg" alt="Taxi Service" width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="section-our-portfolio-title">Taxi Service</h3>
+            <p class="section-our-portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -142,20 +154,20 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="section-our-portfolio-title">Screen Illustrations</h3>
+            <p class="section-our-portfolio-text">Design</p>
           </li>
           <li>
             <img src="./images/img3-0.jpg" alt="Online Courses" width="360" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="section-our-portfolio-title">Online Courses</h3>
+            <p class="section-our-portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="link-logo-footer">WebStudio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
