--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="link-logo">WebStudio</a>
         <ul class="list">
-          <li><a href="" class="link-studio">Studio</a></li>
+          <a href="./index.html" class="link-logo"
+            >Web<span class="header-logo-studio">Studio</span></a
+          >
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="link-address"
@@ -87,7 +89,7 @@
       <section class="section-our-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-member">
             <img
               src="./images/img-3.jpg"
               alt="Mark Guerrero Product Designer"
@@ -96,7 +98,7 @@
             <h3 class="section-our-team-title">Mark Guerrero</h3>
             <p class="section-our-team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img-2.jpg"
               alt="Tom Ford Frontend Developer"
@@ -105,7 +107,7 @@
             <h3 class="section-our-team-title">Tom Ford</h3>
             <p class="section-our-team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img-1.jpg"
               alt="Camila Garcia Marketing"
@@ -114,7 +116,7 @@
             <h3 class="section-our-team-title">Camila Garcia</h3>
             <p class="section-our-team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img.jpg"
               alt="Daniel Wilson UI Designer"
@@ -130,7 +132,7 @@
         <ul class="list">
           <li>
             <img src="./images/img3-5.jpg" alt="Banking app" width="360" />
-            <h3 class="section-our-portfolio-title">Banking app</h3>
+            <h3 class="section-our-portfolio-title">Banking App</h3>
             <p class="section-our-portfolio-text">App</p>
           </li>
           <li>
@@ -166,7 +168,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="link-logo-footer">WebStudio</a>
+      <a href="./index.html" class="link-logo"
+        >Web<span class="footer-logo-studio">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
