--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >Web<span class="header-logo-studio">Studio</span></a
         >
         <ul class="list">
-          <li><a href="./index.html" class="link">Studio</a></li>
+          <li><a href="" class="link">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
